RESOLVED FIXED292119
paktameer.com: Offer pill shape + images are not enclosed properly in container
https://bugs.webkit.org/show_bug.cgi?id=292119
Summary paktameer.com: Offer pill shape + images are not enclosed properly in container
Ahmad Saleem
Reported 2025-04-27 05:23:06 PDT
Created attachment 475055 [details] WebKit ToT vs Other browsers Hi Team, While going through website randomly, I noticed the bug in Safari / WebKit (on WebKit ToT as well), so I am raising it here: Website: https://paktameer.com/ *** Steps to reproduce *** 1) Go to website 2) Go to top left corner where it is showing two buttons (Sales Items & New Arrivals) and notice them *** Actual Result *** It should have aligned content (in pill shape but it is more like multiline content) *** Expected Result *** Proper pill shape content enclosed within container *** Testing *** Safari 18.4: Fails WebKit ToT (Minibrowser - 294163@main): Pass Chrome Canary 137.0.7145.0 (Official Build) canary (arm64): Pass Ladybird (022cd1adcad56d79677f6bf42309f5811e227a5e): Pass Firefox Nightly 139 (20250421090405): Pass Just raising, so we can fix it. Thanks!
Attachments
WebKit ToT vs Other browsers (1.47 MB, image/png)
2025-04-27 05:23 PDT, Ahmad Saleem
no flags
Test reduction (222 bytes, text/html)
2025-04-28 09:52 PDT, alan
no flags
Patch (3.98 KB, patch)
2025-04-28 11:05 PDT, alan
no flags
Patch (5.16 KB, patch)
2025-04-28 19:18 PDT, alan
no flags
[fast-cq]Patch (5.16 KB, patch)
2025-04-29 05:20 PDT, alan
no flags
Ahmad Saleem
Comment 1 2025-04-27 05:23:27 PDT
> WebKit ToT (Minibrowser - 294163@main): Fails
Radar WebKit Bug Importer
Comment 2 2025-04-27 05:24:07 PDT
alan
Comment 3 2025-04-28 09:52:33 PDT
Created attachment 475064 [details] Test reduction
alan
Comment 4 2025-04-28 10:29:07 PDT
This is about legacy preferred width computation (it works fine when redirected to IFC preferred width codepath -when max-width: 100% is removed)
alan
Comment 5 2025-04-28 11:05:05 PDT
alan
Comment 6 2025-04-28 19:18:25 PDT
alan
Comment 7 2025-04-29 05:20:22 PDT
Created attachment 475074 [details] [fast-cq]Patch
EWS
Comment 8 2025-04-29 09:06:43 PDT
Committed 294273@main (5a62d590b25c): <https://commits.webkit.org/294273@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 475074 [details].
Note You need to log in before you can comment on or make changes to this bug.