paktameer.com: Offer pill shape + images are not enclosed properly in container https://bugs.webkit.org/show_bug.cgi?id=292119 <rdar://problem/150135200>

Reviewed by Antti Koivisto.

Negative margin and text-indent got mixed up.
We assume negative childMin value can only be coming from text-indent while in some cases it is caused by negative start margin, where
the content gets pulled to the left (opposite the inline direction) opening up additional space (hence the negative width).

This patch ensures that we only look at the indent when we actually have indent value.

* LayoutTests/fast/inline/negative-margin-triggers-content-wrap-expected.html: Added.
* LayoutTests/fast/inline/negative-margin-triggers-content-wrap.html: Added.
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::textIndentForBlockContainer): Same as before with a tiny change of returning null_opt when text-indent has initial (0) value.
(WebCore::RenderBlockFlow::computeInlinePreferredLogicalWidths const):

Canonical link: https://commits.webkit.org/294273@main